# WedLit

./: .gitignore  CMakeLists.txt
android/WedLit/app/: build.gradle  proguard-rules.pro
android/WedLit/app/src/androidTest/java/com/z/wedlit/: ExampleInstrumentedTest.java
android/WedLit/app/src/main/: AndroidManifest.xml
android/WedLit/app/src/main/java/com/z/wedlit/: MainActivity.java  MainActivityFragment.java  Playing.java  PlayingFragment.java  SendCommandTask.java  UpdateAnimsTask.java
android/WedLit/app/src/main/res/layout/: activity_main.xml  activity_playing.xml  content_main.xml  content_playing.xml  fragment_main.xml  fragment_playing.xml  row.xml
android/WedLit/app/src/main/res/menu/: menu_main.xml  menu_playing.xml
android/WedLit/app/src/main/res/values/: strings.xml
android/WedLit/app/src/test/java/com/z/wedlit/: ExampleUnitTest.java
android/WedLit/gradle/wrapper/: gradle-wrapper.properties
blender/: ext.py  ext2.py  saveToFile.py  senderTest.py  test.py
data/animations/: BrownEyedGirl.json  LetHerGo.json  LittleThings.json  ManOnTheMoon.json  Minutes.json  circle.json  onlyAudio.json
firmware/: CMakeLists.txt  platformio.ini
firmware/src/: Keyframes.cpp  Keyframes.h  config.h  main.cpp
inc/: AnimationController.h  AnimationFactory.h  BaseAnimation.h  BasicTypes.h  IPlayer.h  NodeController.h  WedLit.h  config.h.in
src/: AnimationController.cpp  BaseAnimation.cpp  CMakeLists.txt  Commands.cpp  Commands.h  Connection.cpp  Connection.h  Server.cpp  Server.h  WedLit.cpp  uploader.cpp
src/animations/: AnimationFactory.cpp  CMakeLists.txt  CircleAnimation.cpp  CircleAnimation.h  FileAnimation.cpp  FileAnimation.h  NullAnimation.cpp  NullAnimation.h  ThreeColorBasicAnimation.cpp  ThreeColorBasicAnimation.h
src/audio/: CMakeLists.txt  Player.cpp  Player.h  Player2.cpp  Player2.h
src/net/: CMakeLists.txt  Socket.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
src/nodes/: CMakeLists.txt  KeyframeData.cpp  KeyframeData.h  Node.cpp  Node.h  NodeController.cpp
src/tests/: AnimationControllerTest.cpp  BaseAnimationTest.cpp  CMakeLists.txt  KeyframeDataTest.cpp  TestAnimation.cpp  TestAnimation.h  animctest1.json  discovery.cpp
tools/: startap.sh  stopap.sh
